--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Сайт донатов</title>
+  <title>магазин привилегий сервера <br> MineVor Grief#1 </title>
   <style>
     body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 0; }
     header { background-color: #333; color: white; text-align: center; padding: 20px; }
