--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>магазин донатов</title>
   <style>
-    body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 0; }
-    header { background-color: #333; color: white; text-align: center; padding: 20px; }
-    main { padding: 20px; }
-    section { margin-bottom: 40px; }
-    h2 { font-size: 24px; margin-bottom: 10px; }
+    body {
+      background-image: url('https://github.com/minevor/minevor/blob/main/фон%20мв.jpg?raw=true');
+      background-size: cover; /* Изображение будет растягиваться на весь экран */
+      background-position: center; /* Центрирует фон */
+      background-repeat: no-repeat; /* Запрещает повторение */
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+    }
     .package {
       background-color: #fff; padding: 15px; margin: 10px;
       border: 1px solid #ddd; border-radius: 8px;
