--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>магазин донатов</title>
+  <title>донаты сервера MineVor</title>
   <style>
     body {
       background-image: url('https://github.com/minevor/minevor/blob/main/фон%20мв.jpg?raw=true');
